fix(Header): z-index 800

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,7 +14,7 @@
     opacity: 1;
     visibility: visible;
     transition: all 0.4s ease;
-    z-index: 500;
+    z-index: 800;
 }
 
 .header_hidden {
